# hdupy

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/hdupy/: __init__.py  _abc.py  client.py  typ.py
src/hdupy/data/: apis.py  i18n.py
src/hdupy/modules/: __init__.py  sso.py
src/hdupy/modules/edusys/: __init__.py  _edusys_abc.py
src/hdupy/modules/edusys/modules/: __init__.py  courselect.py  login.py
src/hdupy/modules/edusystem/: _consts.py  courselect.py
src/hdupy/modules/login/: __init__.py  _newjw.py  _sso.py
src/hdupy/utils/: headers.py  i18n.py  templates.py
src/hdupy/utils/cookies/: aiohttp.py  httpx.py
